Add a href to link to email and github

--- a/team-profile-generator/index.html
+++ b/team-profile-generator/index.html
@@ -21,20 +21,23 @@
          <div class="container">
             <h3>Manager</h3>
             <p>ID: 123</p>
-            <p>Email: ruby@email.com</p>
+            <p>
+            <a a href="mailto:insertemalhere@xyz.com" target="_blank">Email:Ruby@email.com</a></p>
             <p>Office Number: 45</p>
         </div>
     </div>
              
     <div class="card">
         <div class="header">
-        <h2>Rupery</h2>
+        <h2>Rupert</h2>
         </div>
         <div class="container">
             <h3>Engineer</h3>    
-            <p>ID: 4456</p>
-            <p>Email: ruper@emai.com</p>
-            <p>Git Hub username: rupertcat</p>
+            <p>ID: 567</p>
+            <p>
+            <a a href="mailto:insertemalhere@xyz.com" target="_blank">Email:rupert@gmail.com</a></p>
+            <p>
+            <a href="https://github.com/rupertrupert">Git Hub username: rupertrupert</a></p>
     </div>
     </div>
                 
@@ -44,19 +47,21 @@
         </div>
         <div class="container">
             <h3>Intern</h3>
-            <p>ID: 999</p>
-            <p>Email: ryan@email.com</p>
-            <p>School: Hello PS</p>
+            <p>ID: 223</p>
+            <p>
+            <a a href="mailto:insertemalhere@xyz.com" target="_blank">Email:ryan@email.com</a></p>
+            <p>School: Avondale</p>
         </div> 
     </div>
     <div class="card">
         <div class="header">
-        <h2>Howdy</h2>
+        <h2>Connie</h2>
         </div>
         <div class="container">
             <h3>Intern</h3>
-            <p>ID: 777</p>
-            <p>Email: How@email.com</p>
-            <p>School: Doody</p>
+            <p>ID: 333</p>
+            <p>
+            <a a href="mailto:insertemalhere@xyz.com" target="_blank">Email:connie@email.com</a></p>
+            <p>School: UT</p>
         </div> 
     </div>
