--- a/team-profile-generator/index.html
+++ b/team-profile-generator/index.html
@@ -21,7 +21,7 @@
          <h3>Manager</h3>
             <p>ID: 123</p>
             <p>
-            Email: <a a href="mailto:insertemalhere@xyz.com" target="_blank">ruby@email.com</a></p>
+            Email: <a a href="mailto:insertemalhere@xyz.com" target="_blank">Ruby@email.com</a></p>
             <p>Office Number: 54</p>
         </div>
     </div>
@@ -35,7 +35,7 @@
             <p>ID: 456</p>
             <p>
             Email: 
-            <a a href="mailto:insertemalhere@xyz.com" target="_blank">rupert@email.com</a></p>
+            <a a href="mailto:insertemalhere@xyz.com" target="_blank">Rupert@email.com</a></p>
             <p>
             Git Hub username:
             <a href="https://github.com/rupert_cat" target="_blank">rupert_cat</a></p>
